# component-inventory

./: LICENSE  README.md  make_all_icons.ps1  make_icon.ps1  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  main.rs
src/modules/: ai.js  attribute_schemas.js  backup.js  bulk_categorize.js  export.js  hardcoded_datasheet.js  import.js  labels.js  modals.js  price.js  table.js
